Optimize layout, add App name and add EditorConfig

--- a/fantastic-sentence-explorer/fantastic-sentence-explorer.csproj
+++ b/fantastic-sentence-explorer/fantastic-sentence-explorer.csproj
@@ -11,4 +11,12 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
+  <ItemGroup>
+    <EditorConfigFiles Remove=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include=".editorconfig" />
+  </ItemGroup>
+
 </Project>
